; ModuleID = '/home/carl/AnghaBench/netdata/database/engine/extr_rrdenglocking.c_rrdeng_destroy_pg_cache_descr.c'
source_filename = "/home/carl/AnghaBench/netdata/database/engine/extr_rrdenglocking.c_rrdeng_destroy_pg_cache_descr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rrdengine_instance = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }
%struct.page_cache_descr = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @rrdeng_destroy_pg_cache_descr(%struct.rrdengine_instance* %0, %struct.page_cache_descr* %1) #0 {
  %3 = alloca %struct.rrdengine_instance*, align 8
  %4 = alloca %struct.page_cache_descr*, align 8
  store %struct.rrdengine_instance* %0, %struct.rrdengine_instance** %3, align 8
  store %struct.page_cache_descr* %1, %struct.page_cache_descr** %4, align 8
  %5 = load %struct.page_cache_descr*, %struct.page_cache_descr** %4, align 8
  %6 = getelementptr inbounds %struct.page_cache_descr, %struct.page_cache_descr* %5, i32 0, i32 1
  %7 = call i32 @uv_cond_destroy(i32* %6)
  %8 = load %struct.page_cache_descr*, %struct.page_cache_descr** %4, align 8
  %9 = getelementptr inbounds %struct.page_cache_descr, %struct.page_cache_descr* %8, i32 0, i32 0
  %10 = call i32 @uv_mutex_destroy(i32* %9)
  %11 = load %struct.page_cache_descr*, %struct.page_cache_descr** %4, align 8
  %12 = call i32 @freez(%struct.page_cache_descr* %11)
  %13 = load %struct.rrdengine_instance*, %struct.rrdengine_instance** %3, align 8
  %14 = getelementptr inbounds %struct.rrdengine_instance, %struct.rrdengine_instance* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = call i32 @rrd_stat_atomic_add(i32* %15, i32 -1)
  ret void
}

declare dso_local i32 @uv_cond_destroy(i32*) #1

declare dso_local i32 @uv_mutex_destroy(i32*) #1

declare dso_local i32 @freez(%struct.page_cache_descr*) #1

declare dso_local i32 @rrd_stat_atomic_add(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
